--- a/src/app/index.css
+++ b/src/app/index.css
@@ -1,7 +1,16 @@
+@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Sans&display=swap');
+
 body {
-  margin: 0;
-  display: flex;
-  min-width: 320px;
-  min-height: 100vh;
-  background: #0E0C15;
+    margin: 0;
+    display: flex;
+    min-width: 320px;
+    min-height: 100vh;
+    background: #0E0C15;
+    font-family: 'IBM Plex Sans', sans-serif;
+    color: #FFFFFF;
+}
+
+#root {
+    width: 100%;
+    margin: 34px 25px 0 34px;
 }
